--- a/_posts/2017-10-03-post3.md
+++ b/_posts/2017-10-03-post3.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-title: "Confederate Memorials"
-date: 2016-12-01
-categories: rblogging
-tags: test ggplot2
+title: Analysis of Confederate memorials
+tags:
+- News
+- Tags
+- Blog
+- Post
+- GGplot2
 ---
-
-
 
 
 ``` r
@@ -62,11 +63,11 @@ require(maps)
 
     ## Loading required package: maps
 
-    ## 
+    ##
     ## Attaching package: 'maps'
 
     ## The following object is masked from 'package:purrr':
-    ## 
+    ##
     ##     map
 
 ``` r
@@ -87,7 +88,7 @@ ggplot()+
                     fill="#ffffff", color="#ffffff", size=0.15) +
   geom_map(data=stateMon,map=states,aes(fill=count,map_id = region),
                     color="#ffffff", size=0.15) +
-    scale_fill_continuous(low='lightblue', high='darkblue', 
+    scale_fill_continuous(low='lightblue', high='darkblue',
                                  guide='colorbar')+
   ggtitle("Number of Confederate Memorials per State")
 ```
