--- a/_posts/2017-10-03-post3.md
+++ b/_posts/2017-10-03-post3.md
@@ -51,7 +51,7 @@ confMon <- as.tibble(confMon)
 confMon%>%group_by(state)%>%summarise(count = n())%>%arrange(by=desc(count))%>%ggplot()+geom_bar(aes(x=reorder(state,count),y=count),stat = 'identity')+coord_flip()
 ```
 
-![](danlarson.io/_posts/ConfMon_files/figure-markdown_github/unnamed-chunk-2-1.png)
+![]({{ site.baseurl }}_posts/ConfMon_files/figure-markdown_github/unnamed-chunk-2-1.png)
 
 ``` r
 stateMon<-confMon%>%group_by(state)%>%summarise(count = n())%>% mutate(region=tolower(state))
@@ -95,4 +95,4 @@ ggplot()+
 
     ## Warning: Ignoring unknown aesthetics: x, y
 
-![](danlarson.io/_posts/ConfMon_files/figure-markdown_github/unnamed-chunk-3-1.png)
+![]({{ site.baseurl }}_posts/ConfMon_files/figure-markdown_github/unnamed-chunk-3-1.png)
