--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -84,7 +84,7 @@ as.tibble(confMon)%>%
 
 ![](ConfMon_files/figure-markdown_github/unnamed-chunk-1-1.png)
 
-![States Bar](/static/img/unnamed-chunk-1)
+![States Bar](danlarson.io/static/img/unnamed-chunk-1)
 
 Another way to showcase these data would be to use a map.
 
@@ -128,4 +128,4 @@ ggplot()+
 
 ![](ConfMon_files/figure-markdown_github/unnamed-chunk-2-1.png)
 
-![States map](/static/img/unnamed-chunk-2-1.png)
+![States map](danlarson.io/static/img/unnamed-chunk-2-1.png)
