--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -82,9 +82,7 @@ as.tibble(confMon)%>%
   theme(legend.position="bottom")
 ```
 
-![](ConfMon_files/figure-markdown_github/unnamed-chunk-1-1.png)
-
-![States Bar](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-1-1.png)
+![States Bar](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-1-1.png){:class="img-responsive"}
 
 Another way to showcase these data would be to use a map.
 
@@ -126,6 +124,4 @@ ggplot()+
 
     ## Warning: Ignoring unknown aesthetics: x, y
 
-![](ConfMon_files/figure-markdown_github/unnamed-chunk-2-1.png)
-
-![States map](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png)
+![States map](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png){:class="img-responsive"}
