--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -82,7 +82,7 @@ as.tibble(confMon)%>%
   theme(legend.position="bottom")
 ```
 
-![States Bar](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-1-1.png){:class="img-responsive"}
+![States Bar]({{"/static/img/unnamed-chunk-1-1.png" | absolute_url }})
 
 Another way to showcase these data would be to use a map.
 
