--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -84,6 +84,8 @@ as.tibble(confMon)%>%
 
 ![States Bar]({{"/static/img/unnamed-chunk-1-1.png" | absolute_url }})
 
+<p><img src="https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-1-1.png" alt="Test Image" /></p>
+
 Another way to showcase these data would be to use a map.
 
 ``` r
