--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -127,3 +127,8 @@ ggplot()+
     ## Warning: Ignoring unknown aesthetics: x, y
 
 ![States map](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png){:class="img-responsive"}
+
+<p><img src="https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png" alt="Test Image" /></p>
+
+
+Test Test Test
