--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -84,7 +84,7 @@ as.tibble(confMon)%>%
 
 ![States Bar]({{"/static/img/unnamed-chunk-1-1.png" | absolute_url }})
 
-<p><img src="https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-1-1.png" alt="Test Image" /></p>
+<p><img src="http://danlarson.io/static/img/unnamed-chunk-1-1.png" alt="Test Image" /></p>
 
 Another way to showcase these data would be to use a map.
 
@@ -128,7 +128,7 @@ ggplot()+
 
 ![States map](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png){:class="img-responsive"}
 
-<p><img src="https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png" alt="Test Image" /></p>
+<p><img src="http://danlarson.io/static/img/unnamed-chunk-2-1.png" alt="Test Image" /></p>
 
 
-Test Test Test
+# Test Test Test
