--- a/_posts/2017-10-04-post3.md
+++ b/_posts/2017-10-04-post3.md
@@ -9,9 +9,9 @@ tags:
 ---
 
 Data
-====
+----
 
-Following the incident in Charlottesville VA this summer, I wanted to know just how many confederate memorials there were. I reached out on Data for Democracy and found a report published by the XXXX. I then scraped the PDG and created a data set. I know it isn't complete, but it is a great start. I have published the data set on Data.World here: <https://data.world/datadanlarson/confederatemonument>
+Following the incident in Charletsville VA this summer, I wanted to know just how many confederate memorials there were. I reached out on Data for Democracy and found a report published by the XXXX. I then scraped the PDG and created a data set. I know it isn't complete, but it is a great start. I have published the data set on Data.World here: <https://data.world/datadanlarson/confederatemonument>
 
 This post is a combination of where these memorials are located and a quick tutorial on how to use the tidyverse to analyze it.
 
@@ -40,9 +40,9 @@ confMon <- data.world::query(
 ```
 
 Tibbles
-=======
+-------
 
-Once you have the data in memory, you can now transform it to a tibble. A tibble is similar to a Dataframe but a little different. I recommend reading Data Science with R by Garrett Grolemund and Hadley Wickham if you want to know more. For know, just know that they allow for easy data pipping that we will be using shortly.
+Once you have the data in memory, you can transform it to a tibble. A tibble is similar to a Dataframe but a little different. I recommend reading Data Science with R by Garrett Grolemund and Hadley Wickham if you want to know more. For know, just know that they allow for easy data pipping that we will be using shortly.
 
 ``` r
 require(tidyverse)
@@ -65,10 +65,57 @@ as.tibble(confMon)
     ## # ... with 1,518 more rows, and 3 more variables: type <chr>, year <chr>,
     ## #   civilwarstatus <chr>
 
-First Visualization
-===================
+Summarizing with tidyverse
+--------------------------
 
-Now that we have our tibble we can create out first visualization. The tidyverse package allows you to do both data transformation and visualization within one string of commands. Looking at the below text you can see that it is much cleaner than if we were to use base R.
+The main benifit of using a tibble over a dataframe is the ease with which you can summarries your data. Without a tibble you may need to take multiple steps to subset, transform, and summarize your data. With a tibble you can do all of this with a singe chain of commands. In the code below, I am able to filter the data set to only monuments, create a table of counts by state and sort the table in only five rows of text. Additionally, I did not need to create a new dataframe.
+
+``` r
+as.tibble(confMon)%>% # Create the tibble
+  group_by(state,civilwarstatus)%>% # Set the group by
+  filter(type == 'Monument')%>%
+  summarise(count = n())%>% # Determine how you want to summarise
+  arrange(by=desc(count)) # Organize the data
+```
+
+    ## # A tibble: 24 x 3
+    ## # Groups:   state [24]
+    ##             state    civilwarstatus count
+    ##             <chr>             <chr> <int>
+    ##  1 North Carolina Confederate State    50
+    ##  2        Georgia Confederate State    49
+    ##  3       Virginia Confederate State    45
+    ##  4       Kentucky      Border State    35
+    ##  5 South Carolina Confederate State    34
+    ##  6        Alabama Confederate State    31
+    ##  7          Texas Confederate State    26
+    ##  8      Louisiana Confederate State    23
+    ##  9    Mississippi Confederate State    22
+    ## 10       Arkansas Confederate State    21
+    ## # ... with 14 more rows
+
+First Visualization
+-------------------
+
+An additional benifit of using the tidyverse is that you can pipe in the ggplot2 commands. The tidyverse package allows you to do both data transformation and visualization within one string of commands. In the code below I have added the ggplot2 commands needed to create a barchart. I want to point out that by using the tidyverse, I have been able to keep my code relatively clean and haven't needed to create any new dataframes.
+
+``` r
+as.tibble(confMon)%>%
+  group_by(state,civilwarstatus)%>%
+  summarise(count = n())%>%
+  arrange(by=desc(count))%>%
+  ggplot()+
+  geom_bar(aes(x=reorder(state,count),y=count,fill=civilwarstatus),stat = 'identity')+
+  coord_flip()+
+  ggtitle("Number of civil war monuments by state")
+```
+
+<p><img src="http://danlarson.io/static/img/unnamed-chunk-2-1.png" alt="Test Image" /></p>
+
+
+While the visual above gets the job done, it is always important to clean up your visuals for publication. Using ggplot2 allows the analyst to make all of the needed adjustments to background, the legend, and other various elements to brand your visuals.
+
+Looking at the data we can see that there are some obvious patterns. First, the states with the most memorials are states that belonged to the confederacy. However, some boarder states have a number of memorials. As we will see in the map below, the majority of the memorials are in the south east of the country. However, there is are a suprising numbe in the North West.
 
 ``` r
 as.tibble(confMon)%>%
@@ -79,56 +126,72 @@ as.tibble(confMon)%>%
   geom_bar(aes(x=reorder(state,count),y=count,fill=civilwarstatus),stat = 'identity')+
   coord_flip()+
   ggtitle("Number of civil war monuments by state")+
+  #set theme to black and white
+  theme_bw() +
+  theme(panel.background=element_rect(fill="#F0F0F0")) +
+  theme(plot.background=element_rect(fill="#F0F0F0")) +
+  theme(panel.border=element_rect(colour="#F0F0F0")) +
+  # Format the grid
+  theme(panel.grid.major=element_line(colour="#D0D0D0",size=.75)) +
+  theme(axis.ticks=element_blank()) +
+  # Dispose of the legend
+  theme(plot.title=element_text(face="bold",hjust=0,vjust=2,colour="#3C3C3C",size=14)) +
+  ylab("Number of memorials") +
+  xlab("State") +
+  theme(axis.text.x=element_text(size=11,colour="#535353",face="bold")) +
+  theme(axis.text.y=element_text(size=11,colour="#535353",face="bold")) +
+  theme(axis.title.y=element_text(size=11,colour="#535353",face="bold",vjust=1.5)) +
+  theme(axis.title.x=element_text(size=11,colour="#535353",face="bold",vjust=-.5)) +
+  # Plot margins and finally line annotations
+  theme(plot.margin = unit(c(1, 1, .5, .7), "cm")) +
   theme(legend.position="bottom")
 ```
 
-![States Bar]({{"/static/img/unnamed-chunk-1-1.png" | absolute_url }})
+<p><img src="http://danlarson.io/static/img/unnamed-chunk-3-1.png" alt="Test Image" /></p>
 
-<p><img src="http://danlarson.io/static/img/unnamed-chunk-1-1.png" alt="Test Image" /></p>
 
-Another way to showcase these data would be to use a map.
+Mapping with the tidyverse
+==========================
+
+The visual above demonstates that confederate memorials are consolidated into only portion of the states, it is nice to be able to visual see how these states might be related. The tidyverse also gives the R user the ability to build maps quickly and easily. To get started we do need to bring in the 'maps' package.
 
 ``` r
 require(maps)
-```
 
-    ## Loading required package: maps
-
-    ##
-    ## Attaching package: 'maps'
-
-    ## The following object is masked from 'package:purrr':
-    ##
-    ##     map
-
-``` r
 states <- map_data('state')
 
 states_all <- data.frame(region=unique(states$region))
 stateMon<-confMon%>%group_by(state)%>%summarise(count = n())%>% mutate(region=tolower(state))
 stateMon <- left_join(states_all,stateMon,by='region')
-```
 
-    ## Warning: Column `region` joining factor and character vector, coercing into
-    ## character vector
-
-``` r
 ggplot()+
-  geom_map(data=states, map=states,
-                    aes(x=long, y=lat, map_id=region),
-                    fill="#ffffff", color="#ffffff", size=0.15) +
-  geom_map(data=stateMon,map=states,aes(fill=count,map_id = region),
-                    color="#ffffff", size=0.15) +
-    scale_fill_continuous(low='lightblue', high='darkblue',
-                                 guide='colorbar')+
+  theme_bw() +
+  theme(panel.background=element_rect(fill="#F0F0F0")) +
+  theme(plot.background=element_rect(fill="#F0F0F0")) +
+  theme(panel.border=element_rect(colour="#F0F0F0")) +
+  # Format the grid
+  theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),
+        axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())+
+  # Dispose of the legend
+  theme(plot.title=element_text(face="bold",hjust=0,vjust=2,colour="#3C3C3C",size=14))+
+  geom_map(data=states, map=states,aes(x=long, y=lat, map_id=region),fill="#ffffff", color="#ffffff", size=0.15) +
+  geom_map(data=stateMon,map=states,aes(fill=count,map_id = region),color="#ffffff", size=0.15) +
+  scale_fill_continuous(low='lightblue', high='darkblue', guide='colorbar')+
   ggtitle("Number of Confederate Memorials per State")
 ```
 
-    ## Warning: Ignoring unknown aesthetics: x, y
+<p><img src="http://danlarson.io/static/img/unnamed-chunk-4-1.png" alt="Test Image" /></p>
 
-![States map](https://github.com/dwlarson10/DataDanLarson/blob/gh-pages/_site/static/img/unnamed-chunk-2-1.png){:class="img-responsive"}
+Wrapping up
+-----------
 
-<p><img src="http://danlarson.io/static/img/unnamed-chunk-2-1.png" alt="Test Image" /></p>
+Using the tibbles, tidyr, dplr, and ggplot2 allow for very quick and easy manipulation of data. With fewer then ten lines of code you are up have visualizations without filling up your environment with unneeded objects. I am still new to using the tidyverse packages and using this space to learn more about how to use them efficiently. I will continue to explore this data set, adding new elements as I think of them, to try to understand how it is impacting our current culture.
+
+
 
 
 # Test Test Test
